2008-06-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-currencyclient.py.in
	(FakeCurrencyClientTestCase.test04_changeNote.changeNote): Derived
	method to handle different behavior in Fake.
	(FakeCurrencyClientTestCase.test09_getNote_with_id): Derived
	method as test not needed for Fake

	* tests/testmessages.py (clear_all_messages): Renamed function
	from clear_messages.

	* tests/test-currencyclient.py.in
	(FakeCurrencyClientTestCase.test05_mergeNotes): Derived method
	to handle different behavior in Fake.
	(FakeCurrencyClientTestCase.test06_meltNotes): Derived method to
	handle different behavior in Fake.

	* tests/testmessages.py (clear_messages): Wrote function.

2008-06-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-clientserver.py.in (FakeUser): Created class.
	(ClientServer.quit): Added test for ping timeout on server when
	client quits.
	(InvalidProtocol): Renamed to DummyServerTests
	(DummyServerTests.test02_pingRenew): Wrote test.

2008-05-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-clientserver.py.in (ClientServer.killThenPing): Wrote
	function.
	(ClientServer.test03_killThenPing): Wrote function.
	(ClientServer.test04_deadServerTransport): Wrote function.
	(ClientServer.deadServerTransport): Wrote function.
	Added copyright notice.

2008-05-23  Loic Dachary <loic@dachary.org>

	* Release 1.6.0

	* pokernetwork/pokeravatar.py: Move PACKET_POKER_TABLE_JOIN
	  handling before table selection otherwise it is ignored when the
	  player has already joined the table.

2008-05-22  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: PacketPokerTourneyPlayersList and
	  PacketPokerPlayersList specify field type
	* pokernetwork/pokerpackets.py: PacketPokerTourneyPlayersList and
	  PacketPokerPlayersList documentation fixes

2008-05-21  Loic Dachary <loic@dachary.org>

	* debian/control, debian/control.unstable: poker2d depends on
	  python-openssl

2008-05-20  Loic Dachary <loic@dachary.org>
